--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://main.dk4fzojjo596g.amplifyapp.com/",
   "name": "self-website",
   "private": true,
   "version": "0.0.0",
