--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@coreui/coreui": "^5.0.0-alpha.2",
     "@coreui/react": "^5.0.0-alpha.0",
+    "@emailjs/browser": "^3.11.0",
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
     "react-collapsed": "^4.0.4",
