--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@coreui/coreui": "^5.0.0-alpha.2",
     "@coreui/react": "^5.0.0-alpha.0",
     "@emailjs/browser": "^3.11.0",
+    "@vercel/analytics": "^1.0.2",
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
     "react-collapsed": "^4.0.4",
